Bug 244017. Hack invalidation of block children of blocks to avoid answering the question of whether we're supposed to invalidate the difference in frame bounds or the difference in overflow areas. r+sr=dbaron